# python-sigma

./: .gitignore  CNAME  README.md  custom-serializers.html  custom-transformations.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  serializer-definition.html  serializers.html  transformations.html
.github/workflows/: default.yml
_sources/: custom-serializers.rst.txt  serializer-definition.rst.txt  transformations.rst.txt
_sources/api/: modules.rst.txt  sigma.cli.converter.rst.txt  sigma.cli.elastic.rst.txt  sigma.cli.rst.txt  sigma.cli.transform.rst.txt  sigma.rst.txt  sigma.schema.rst.txt  sigma.serializer.rst.txt  sigma.util.rst.txt
_sources/serializers/: index.rst.txt
api/: modules.html  sigma.cli.converter.html  sigma.cli.elastic.html  sigma.cli.html  sigma.cli.list.html  sigma.cli.mitre.html  sigma.cli.schema.html  sigma.cli.transform.html  sigma.cli.validate.html  sigma.errors.html  sigma.grammar.html  sigma.html  sigma.mitre.html  sigma.schema.html  sigma.serializer.elastic.html  sigma.serializer.html  sigma.transform.html  sigma.util.html
docs/: conf.py  index.rst  sigma.converter.rst  sigma.errors.rst  sigma.grammar.rst  sigma.rst  sigma.serializer.rst  sigma.transform.rst
docs/source/: conf.py  custom-transformations.rst  index.rst  serializers.rst
docs/source/api/: sigma.cli.list.rst  sigma.cli.mitre.rst  sigma.cli.schema.rst  sigma.cli.validate.rst  sigma.mitre.rst  sigma.rst  sigma.serializer.elastic.rst  sigma.transform.rst
docs/source/serializers/: elastic.rst
examples/: loading_rules.py  modifying_rules.py  rule.yml  serialization.py  transformation.py
examples/conversion/: convert.py  eql.yml  inherited-serializer.yml  kql.yml  rule.yml
serializers/: elastic.html  index.html
sigma/: __init__.py  __main__.py  converter.py  errors.py  grammar.py  mitre.py  schema.py  serializer.py  transform.py  util.py
sigma/cli/: __init__.py  converter.py  elastic.py  list.py  mitre.py  schema.py  test.py  transform.py  validate.py
sigma/data/: mitre.json
sigma/data/serializers/: kql.yml
sigma/serializer/: __init__.py  elastic.py
sigma/transform/: __init__.py
tests/: conftest.py  test_python_sigma.py  test_sigma_grammar.py  test_sigma_mitre.py  test_sigma_rule.py  test_sigma_serializer.py  test_sigma_transform.py
